--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "typer>=0.13.0",
     "contextily>=1.7.0",
     "scikit-image>=0.25.2",
+    "rioxarray>=0.19.0",
 ]
 
 [project.optional-dependencies]
